ft: drop down menu feature done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@
             </div>
         </div>
         
+        <div class="menu">
+            <ul>
+                <li>
+                    <a href="#">
+                         <i class="menu-icons fa-regular fa-user"></i>
+                          Profile
+                        </a>
+                </li>
+                <li>
+                    <a href="#">
+                         <i class="menu-icons fa-regular fa-comment"></i>
+                          Inbox
+                        </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="menu-icons fa-solid fa-gear"></i>
+                         Setting
+                        </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="menu-icons fa-regular fa-circle-question"></i> Help
+                    </a>
+                </li>
+                <li>
+                    <a href="#"> 
+                        <i class="menu-icons fa-solid fa-right-from-bracket"></i>
+                        Logout
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+
     </nav>
         
         <script src="./app.js"></script>
